# textual-terminal

./: README.md  pyproject.toml
examples/: bash_htop_example.py
textual_terminal/: __init__.py  _terminal.py
